# platoon

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  refpoint.txt
modules/common/: CMakeLists.txt  functiontool.cpp  functiontool.h
modules/common/include/: Config.h  Config.h.in  FakeLog.h  atd_app.h  easylogging++.h  log.h  macro.h  registerer.h
modules/common/include/math/: angle.h  gaussian.h  math_utils.h  sin_table.h
modules/common/include/status/: status.h
modules/common/include/time/: time.h  time_tool.h  time_util.h  timer.h
modules/common/include/util/: BaseUtility.tar.xz  factory.h  file.h  ini_config.h  map_util.h  string_util.h  util.h
modules/common/include/util/3rd/: strutil.h
modules/common/src/: FakeLog.cc  atd_app.cc  easylogging++.cpp  registerer.cc
modules/common/src/math/: angle.cc  gaussian.cc  sin_table.cc
modules/common/src/time/: time_tool.cpp  timer.cc
modules/common/src/util/: BaseUtility.tar.xz  file.cc  ini_config.cpp  util.cc
modules/common/src/util/3rd/: strutil.cc  tinyxml2.cpp
modules/communication/: CMakeLists.txt  DataMessageProto.pb.cc  UDPVehicle.hpp  commu.cpp  commu.h  communication.cpp  communication.h  communication_config.cpp  communication_config.h  configdata.cpp  configdata.h  datacontainer.cpp  datacontainer.h  datadefine.h  fms.cpp  fms.h  fmsdata.cpp  fmsdata.h  fmshander.cpp  fmshandler.h  gnssData.h~  handler.cpp  handler.h  highfredatacontainer.cpp  highfredatacontainer.h  inbound_can_data.h  inbound_communication_header.h  inbound_communication_header.h~  inbound_gnss_data.h  inbound_gnss_data.h~  lowfredatacontainer.cpp  lowfredatacontainer.h  main.cpp  manager.cpp  manager.h  process.cpp  process.h  receivehighfreinfo.cpp  receivehighfreinfo.h  receivelowfreinfo.cpp  (+14 more)
modules/ipc/: CMakeLists.txt
modules/ipc/conf/: channel_config.pb.cc  channel_config.pb.h  channel_config.proto
modules/ipc/include/: adapter.h  channel_manager.h  channel_manager_macro.h  message_channel.h  tmp_trans_channel.h
modules/ipc/include/TemplateBasedIPC/: Message_Channel.h  datastreamcontainer.h  msgdispatcher.h  protowrapper.h  raii.h  rwlock.h
modules/ipc/include/lcm/: clcmsubscriber.h  lcm_channel.h
modules/ipc/include/monitor_log/: monitor_global.h  monitor_log_buffer.h  monitor_logger.h
modules/ipc/include/protobuf/: adapter_once.h  cprotosubscriber.h  msg_array.hpp
modules/ipc/message/lcm/: ADM_RPPOINT.hpp  ADM_RPPOINT_LIST.hpp  APP_PROXY_REQUEST.hpp  APP_PROXY_REQUEST_POSITION.hpp  BREAKTHROUGH.hpp  CAN2_DEV2IPC.hpp  CAN2_FRONTMWR2IPC.hpp  CAN2_IPC2DEV.hpp  CAN2_ULTRASONIC.hpp  CANET_MWR_ESR2IPC.hpp  CANET_MWR_RSDSPCAN2IPC.hpp  CANET_MWR_SRR2IPC.hpp  CAN_MSG.hpp  CHAIN_ELEMENT.hpp  DISPLAY_CoupleOut.hpp  DRIVER_MAP_CHAIN_FURNITURE_POI.hpp  DRIVER_MAP_CHAIN_FURNITURE_POINT.hpp  DRIVER_MAP_CHAIN_FURNITURE_POI_LIST.hpp  DRIVER_MAP_LANE.hpp  DRIVER_MAP_LANE_LINE_PROFILE.hpp  DRIVER_MAP_LANE_LINE_PROFILE_LIST.hpp  DRIVER_MAP_LANE_LINK_KEY.hpp  DRIVER_MAP_LANE_SECTION.hpp  DRIVER_MAP_LANE_SECTION_LIST.hpp  DRIVER_MAP_ONE_PARKING_SITE.hpp  DRIVER_MAP_OUTLINE.hpp  DRIVER_MAP_PARKING_SITE_POI.hpp  DRIVER_MAP_PARKING_SITE_POI_LIST.hpp  DRIVER_MAP_POI.hpp  DRIVER_MAP_POINT.hpp  DRIVER_MAP_POINT_EXTEND.hpp  DRIVER_MAP_POINT_GPS.hpp  DRIVER_MAP_POI_LIST.hpp  DRIVER_MAP_SIGN_BOARD_POI.hpp  DRIVER_MAP_SIGN_BOARD_POI_LIST.hpp  DRIVER_MAP_SPEED_LIMIT.hpp  DRIVER_MAP_TOTAL.hpp  DRIVER_MAP_TSR_DISTANCE.hpp  DRIVER_MAP_WAYPOINT.hpp  DRIVER_can.hpp  (+145 more)
modules/ipc/message/protobuf/: lcm_example.pb.cc  lcm_example.pb.h  lcm_example.proto  proto_message.docx
modules/ipc/message/protobuf/MeProcess/: mobileyeq4.pb.cc  mobileyeq4.pb.h  mobileyeq4.proto
modules/ipc/message/protobuf/MwrProcess/: DensoMrr.pb.cc  DensoMrr.pb.h  DensoMrr.proto
modules/ipc/message/protobuf/canbus/: canbus_conf.pb.cc  canbus_conf.pb.h  chassis.pb.cc  chassis.pb.h  chassis_detail.pb.cc  chassis_detail.pb.h  chassis_detail.proto  vehicle_parameter.pb.cc  vehicle_parameter.pb.h
modules/ipc/message/protobuf/common/: drive_event.pb.cc  drive_event.pb.h  drive_event.proto  drive_state.pb.cc  drive_state.pb.h  drive_state.proto  error_code.pb.cc  error_code.pb.h  error_code.proto  geometry.pb.cc  geometry.pb.h  geometry.proto  header.pb.cc  header.pb.h  header.proto  pnc_point.pb.cc  pnc_point.pb.h  pnc_point.proto  reserved.pb.cc  reserved.pb.h  reserved.proto  vehicle_signal.pb.cc  vehicle_signal.pb.h  vehicle_signal.proto  vehicle_state.pb.cc  vehicle_state.pb.h  vehicle_state.proto
modules/ipc/message/protobuf/data/: static_info.pb.cc  static_info.pb.h  static_info.proto
modules/ipc/message/protobuf/dr/: dr.pb.cc  dr.pb.h  dr.proto
modules/ipc/message/protobuf/drivers/: delphi_esr.pb.cc  delphi_esr.pb.h  delphi_esr.proto  ins.pb.cc  ins.pb.h  ins.proto  mobileye.pb.cc  mobileye.pb.h  mobileye.proto  momentaloc.pb.cc  momentaloc.pb.h  momentaloc.proto  ultrasonic.pb.cc  ultrasonic.pb.h  ultrasonic.proto  uwb.pb.cc  uwb.pb.h  uwb.proto  vcu.pb.cc  vcu.pb.h  vcu.proto
modules/ipc/message/protobuf/hdmap/: enginedestination.pb.cc  enginedestination.pb.h  enginedestination.proto  enginelocmap.pb.cc  enginelocmap.pb.h  enginelocmap.proto  engineremaindistance.pb.cc  engineremaindistance.pb.h  engineremaindistance.proto  enginesurmap.pb.cc  enginesurmap.pb.h  enginesurmap.proto  enginesurmapdece.proto  enginetargetlanes.pb.cc  enginetargetlanes.pb.h  enginetargetlanes.proto  gridlog.pb.cc  gridlog.pb.h  gridlog.proto
modules/ipc/message/protobuf/localization/: localization.pb.cc  localization.pb.h  localization.proto  measure.pb.cc  measure.pb.h  measure.proto  pose.pb.cc  pose.pb.h  pose.proto
modules/ipc/message/protobuf/monitor/: monitor_conf.pb.cc  monitor_conf.pb.h  monitor_conf.proto  online_report.pb.cc  (+5 more)
modules/ipc/src/: channel_manager.cc  tmp_trans_channel.cc
modules/ipc/src/TemplateBasedIPC/: channelmanager_simple.cpp  channelmanager_simpletest.cc  datastreamcontainer.cpp  msgdispatcher.cpp  protowrapper.cpp  rwlock.cpp
modules/ipc/src/monitor_log/: monitor_global.cpp  monitor_log_buffer.cpp  monitor_logger.cpp
(+188 files in other folders)
